<resources>
    <string name="app_name">PDLCRemoteControl</string>
    <string name="title_activity_remote_control">遥控器</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="dev">设备标识：</string>
    <string name="poweroff">关机</string>
    <string name="mute">静音</string>
    <string name="poweron">开机</string>
    <string name="up">上</string>
    <string name="left">左</string>
    <string name="ok">ok</string>
    <string name="right">右</string>
    <string name="down">下</string>
    <string name="back">返回</string>
    <string name="home">HOME</string>
    <string name="menu">菜单</string>
    <string name="stop">停止</string>
    <string name="play">播放</string>
    <string name="trans">透明</string>
    <string name="untrans">雾状</string>
    <string name="prjoff">关投影</string>
    <string name="prjon">开投影</string>
</resources>
